src/projeto_compilador_rust/Rust.jj
/**
 * JavaCC template file created by SF JavaCC plugin 1.5.28+ wizard for JavaCC 1.5.0+
 */
options {
    STATIC = true;
}


PARSER_BEGIN(Rust)
package projeto_compilador_rust;

public class Rust
{
  public static void main(String args []) throws ParseException
  {
    Rust parser = new Rust(System.in);
    System.out.println("Compilador Rust carregado. Digite o codigo:");
    try
    {
      parser.Start();
      System.out.println("Analise Sintatica: OK.");
    }
    catch (Exception e)
    {
      System.out.println("Erro Sintatico: " + e.getMessage());
    }
    catch (Error e)
    {
      System.out.println("Erro: " + e.getMessage());
    }
  }
}

PARSER_END(Rust)

SKIP :
{
  " "
| "\r"
| "\t"
| "\n"
}

TOKEN : /* OPERATORS E SÍMBOLOS*/
{
  < PLUS : "+" >
| < MINUS : "-" >
| < MULTIPLY : "*" >
| < DIVIDE : "/" >
| < MODULO : "%" >
| < AND : "&&" >
| < OR : "||" >
| < NOT : "!" >
| < EQ : "==" >
| < NEQ : "!=" >
| < LT : "<" >
| < GT : ">" >
| < LE : "<=" >
| < GE : ">=" >
| < DOT : "." >

}

TOKEN : /* PALAVRAS RESERVADAS */
{
    <I32: "i32"> | <F64: "f64"> | <BOOL: "bool"> | <CHAR_T: "char"> | <STR_T: "str">
  | < FN: "fn" > | < LET: "let" > | < MUT: "mut" >
  | < MATCH: "match" > | < IF: "if" > | < ELSE: "else" >
  | < WHILE: "while" > | < FOR: "for" > | < ARROW: "->" >
  | < ASSIGN: "=" > | < SEMICOLON: ";" > | < COLON: ":" >
  | < LBRACE: "{" > | < RBRACE: "}" > | < LPAREN: "(" >
  | < RPAREN: ")" > | < COMMA: "," > | < FAT_ARROW: "=>" >
  | < LBRACK: "[" > | < RBRACK: "]" >
  | < ENUM: "enum" > | < STRUCT: "struct" > | < AS: "as" >
  | <ASYNC: "async"> | <AWAIT: "await"> | <BREAK: "break">
  | <CONST: "const"> | <CONTINUE: "continue"> | <CRATE: "crate">
  | <DYN: "dyn"> | <EXTERN: "extern"> | <FALSE: "false">
  | <TRUE: "true"> | <IMPL: "impl">| <IN: "in"> | <LOOP: "loop">
  | <MOD: "mod"> | <MOV: "mov"> | <PUB: "pub"> | <REF: "ref">
  | <RETURN: "return"> | <SELF: "self"> | <SSELF: "Self">
  | <STATIC: "static"> | <SUPER: "super"> | <TRAIT: "trait">
  | <TYPE: "type"> | <UNSAFE: "unsafe"> | <USE: "use">
  | <WHERE: "where"> | <ABSTRACT: "abstract">
  | <BECOME: "become"> | <BOX: "box"> | <DO: "do">
  | <FINAL: "final"> | <GEN: "gen"> | <MACRO: "macro">
  | <OVERRIDE: "override"> | <PRIV: "priv"> | <TRY: "try">
  | <TYPEOF: "typeof"> | <UNSIZED: "unsized"> | <VIRTUAL: "virtual">
  | <YIELD: "yield"> | <_STATIC: "'static"> | <MACRO_RULES: "macro_rules">
  | <RAW: "raw"> | <SAFE: "safe"> | <UNION: "union">
  | <UNDERSCORE: "_"> | <DOTDOT: ".."> | <PATH_SEPARATOR: "::">
}

TOKEN :
{
    < CONSTANT : (< DIGIT >)+ >
  | < FLOAT_LITERAL: (<DIGIT>)+ "." (<DIGIT>)+ >
  | < BOOLEAN_LITERAL: "true" | "false" >
  | < CHAR_LITERAL: "'" (~["'", "\n", "\r"]) "'" >
  | < #DIGIT : [ "0"-"9" ] >
  | < IDENTIFIER : (["a"-"z", "A"-"Z", "_"])(["a"-"z", "A"-"Z", "0"-"9", "_"])* >
  | < STRING_LITERAL : "\"" (~["\"", "\n", "\r"])* "\"" >
  | < PRINT: "println!" >
  | < READ: "read_line!" >
}



/* REGRA DE ENTRADA PRINCIPAL */
void Start() :
{}
{
  ( Item() )* < EOF >
}



void EntradaSaida() : {} {
    <PRINT> <LPAREN> Expressao() <RPAREN> <SEMICOLON>
  | <READ> <LPAREN> <IDENTIFIER> <RPAREN> <SEMICOLON>
}

/* IMPORTAÇÃO E MÓDULOS */
void module_declaration() :
{}
{
  < MOD > < IDENTIFIER > < LBRACE > ( Item() )* < RBRACE >
}

void Item() :
{}
{
    LOOKAHEAD(2) Funcao()
  | LOOKAHEAD(2) StructDef()
  | LOOKAHEAD(2) EnumDef()
  | LOOKAHEAD(2) module_declaration()
  | use_imports()
  | DeclaracaoConst()
}

void modules_import() :
{}
{
  < MOD > < IDENTIFIER >
}

void use_imports() : {} {
  <USE> path_set() (
      <LBRACE> (<IDENTIFIER> (<COMMA>)? )* <RBRACE>
    | <IDENTIFIER> [ <AS> <IDENTIFIER> ]
  ) <SEMICOLON>
}

void direct_import_full_path() :
{}
{
  path_set()< IDENTIFIER >< LPAREN >< RPAREN >
}

void path_set() :
{}
{
  <IDENTIFIER>(< PATH_SEPARATOR>< IDENTIFIER >)*
}

/* OPERAÇÕES ARITMÉTICAS */
int one_line() :
{}
{
  Expressao() ";"
  {
    return 0;
  }
| ";"
  {
    return 1;
  }
}

void sum() :
{}
{
  term()
  (
    (
      < PLUS >
    | < MINUS >
    )
    term()
  )*
}

void term() :
{}
{
  unary()
  (
    (
      < MULTIPLY >
    | < DIVIDE >
    )
    unary()
  )*
}

void unary() :
{}
{
  < MINUS > element()
| element()
}

void element() :
{}
{
  < CONSTANT >
| < LPAREN > sum() < RPAREN >
}

/* Fluxo de controle : regras adaptadas para a interface do parser global. */

void EstruturaControle() :
{}
{
    IfStmt()
  | WhileStmt()
  | LoopStmt()
  | ForStmt()
  | MatchStmt()
}

void IfStmt() :
{}
{
  <IF> Expressao() Bloco()
  ( LOOKAHEAD(2) <ELSE> <IF> Expressao() Bloco() )*
  [ <ELSE> Bloco() ]
}

void WhileStmt() :
{}
{
  <WHILE> Expressao() Bloco()
}

void LoopStmt() :
{}
{
  <LOOP> Bloco()
}

void ForStmt() :
{}
{
  <FOR> <IDENTIFIER> <IN> Iteravel() Bloco()
}

void MatchStmt() :
{}
{
  <MATCH> Expressao() <LBRACE> ( MatchArm() ( <COMMA> )? )* <RBRACE>
}

void MatchArm() :
{}
{
  Pattern() <FAT_ARROW> MatchBody()
}

void Pattern() :
{}
{
    <CONSTANT>
  | <BOOLEAN_LITERAL>
  | <TRUE>
  | <FALSE>
  | <IDENTIFIER>
  | <STRING_LITERAL>
  | <UNDERSCORE>
}

void MatchBody() :
{}
{
    Bloco()
  | <STRING_LITERAL>
  | Expressao()
}

void Iteravel() :
{}
{
  Expressao() [ <DOTDOT> Expressao() ]
}

/* Wrappers temporarios para integrar o bloco de controle antes da chegada do Start(). */

void Bloco() :
{}
{
  <LBRACE>
    ( LOOKAHEAD(2) Comando() )* [ Expressao() ] // A expressão de retorno opcional no final
  <RBRACE>
}

void DeclaracaoVar() : {} {
    <LET> [<MUT>] <IDENTIFIER> [ <COLON> Tipo() ] [ <ASSIGN> Expressao() ] <SEMICOLON>
}

void DeclaracaoConst() : {} {
    <CONST> <IDENTIFIER> <COLON> Tipo() <ASSIGN> Expressao() <SEMICOLON>
}

void Comando() :
{}
{
    DeclaracaoVar()
  | DeclaracaoConst()
  | EstruturaControle()
  | Expressao() <SEMICOLON>
}

/*  Tipos  */

void Tipo() : {} {
    TipoPrim()
  | <LPAREN> Tipo() ( <COMMA> Tipo() )+ <RPAREN>
  | <LBRACK> Tipo() <SEMICOLON> <CONSTANT> <RBRACK>
}

void TipoPrim() : {} {
    <I32> | <F64> | <BOOL> | <CHAR_T> | <STR_T>
}

/*  Funcoes, Structs e Enums  */

// Assinatura da função, parâmetros e retorno são opcionais (ex: fn teste() {})
void Funcao() : {} {
  <FN> <IDENTIFIER> <LPAREN> [ Parametros() ] <RPAREN> [ <ARROW> Tipo() ] Bloco()
}

// Lista de parâmetros separados por vírgula
void Parametros() : {} {
  Parametro() ( <COMMA> Parametro() )*
}

// Único parâmetro (ex: "id: i32")
void Parametro() : {} {
  <IDENTIFIER> <COLON> Tipo()
}

// Estrutura do struct, campos são opcionais
void StructDef() : {} {
  <STRUCT> <IDENTIFIER> <LBRACE> [ CamposStruct() ] <RBRACE>
}

// Lista de campos, aceita vírgula sobrando no final (ex: a: i32, )
void CamposStruct() : {} {
  CampoStruct() ( <COMMA> CampoStruct() )* [ <COMMA> ]
}

// Único campo interno (ex: "nome: String")
void CampoStruct() : {} {
  <IDENTIFIER> <COLON> Tipo()

//1: or lógico (||)
}

// Estrutura base do enum
void EnumDef() : {} {
  <ENUM> <IDENTIFIER> <LBRACE> [ VariantesEnum() ] <RBRACE>
}

// Variantes do enum, também aceita vírgula sobrando no final
void VariantesEnum() : {} {
  <IDENTIFIER> ( <COMMA> <IDENTIFIER> )* [ <COMMA> ]
}

void Expressao() : {}
{
  Atribuicao()
}

void Atribuicao() : {} {
    LOOKAHEAD(2) <IDENTIFIER> <ASSIGN> Atribuicao()
  | ExpressaoLogicaOr()
}

//1: or lógico (||)
void ExpressaoLogicaOr() : {}
{
  ExpressaoLogicaAnd() ( <OR> ExpressaoLogicaAnd() )*
}

//2: and logico (&&)
void ExpressaoLogicaAnd() : {}
{
  ExpressaoIgualdade() ( <AND> ExpressaoIgualdade() )*
}

//3: igualdade (==, !=)
void ExpressaoIgualdade() : {}
{
  ExpressaoRelacional() ( ( <EQ> | <NEQ> ) ExpressaoRelacional() )*
}

//4: relacional (<, >, <=, >=)
void ExpressaoRelacional() : {}
{
  ExpressaoAditiva() ( ( <LT> | <GT> | <LE> | <GE> ) ExpressaoAditiva() )*
}

//5: adição e Subtração (+, -)
void ExpressaoAditiva() : {}
{
  ExpressaoMultiplicativa() ( ( <PLUS> | <MINUS> ) ExpressaoMultiplicativa() )*
}

// Precedência 6: Multiplicação, Divisão e Módulo (*, /, %)
void ExpressaoMultiplicativa() : {}
{
  ExpressaoUnaria() ( ( <MULTIPLY> | <DIVIDE> | <MODULO> ) ExpressaoUnaria() )*
}

//7: operadores unários (!verdadeiro, -numero)
void ExpressaoUnaria() : {}
{
  ( <MINUS> | <NOT> ) ExpressaoUnaria()
| ExpressaoAcessoOuChamada()
}

//8: chamadas de funções, métodos
void ExpressaoAcessoOuChamada() : {}
{
  FatorBase()
  (
    <NOT> <LPAREN> ListaArgumentos() <RPAREN>
  | <LPAREN> ListaArgumentos() <RPAREN>
  | <DOT> <IDENTIFIER> [ <LPAREN> ListaArgumentos() <RPAREN> ]
  )*
}

//a base de tudo: números, textos, booleanos, variáveis e parênteses
void FatorBase() : {}
{
  Literal()
| <IDENTIFIER>
| IfStmt()
| MatchStmt()
| <LPAREN> Expressao() ( <COMMA> Expressao() )+ <RPAREN>
| <LPAREN> Expressao() <RPAREN>
| ArrayLiteral()
}

void Literal() : {} {
    <CONSTANT>
  | <FLOAT_LITERAL>
  | <BOOLEAN_LITERAL>
  | <TRUE>
  | <FALSE>
  | <CHAR_LITERAL>
  | <STRING_LITERAL>
}

void ArrayLiteral() : {} {
    <LBRACK> [ ListaExpressoes() ] <RBRACK>
}

void ListaExpressoes() : {} {
    Expressao() ( <COMMA> Expressao() )*
}

//regra para ajudar a processar os argumentos separados por virgula
void ListaArgumentos() : {}
{
  [ Expressao() ( <COMMA> Expressao() )* ]
}
