src/projeto_compilador_rust/Rust.java
/* Generated By:JavaCC: Do not edit this line. Rust.java */
package projeto_compilador_rust;

public class Rust implements RustConstants {
  public static void main(String args []) throws ParseException
  {
    Rust parser = new Rust(System.in);
    System.out.println("Compilador Rust carregado. Digite o codigo:");
    try
    {
      parser.Start();
      System.out.println("Analise Sintatica: OK.");
    }
    catch (Exception e)
    {
      System.out.println("Erro Sintatico: " + e.getMessage());
    }
    catch (Error e)
    {
      System.out.println("Erro: " + e.getMessage());
    }
  }

/* REGRA DE ENTRADA PRINCIPAL */
// Exemplo: fn soma(a: i32, b: i32) -> i32 { a + b }
  static final public void Start() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FN:
      case ENUM:
      case STRUCT:
      case CONST:
      case MOD:
      case USE:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      Item();
    }
    jj_consume_token(0);
  }

// Exemplo: println!("Ola");
// Exemplo: read_line!(nome);
  static final public void EntradaSaida() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PRINT:
      jj_consume_token(PRINT);
      jj_consume_token(LPAREN);
      Expressao();
      jj_consume_token(RPAREN);
      jj_consume_token(SEMICOLON);
      break;
    case READ:
      jj_consume_token(READ);
      jj_consume_token(LPAREN);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(RPAREN);
      jj_consume_token(SEMICOLON);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/* IMPORTAÇÃO E MÓDULOS */
// Exemplo: mod utils { fn dobro(x: i32) -> i32 { x * 2 } }
  static final public void module_declaration() throws ParseException {
    jj_consume_token(MOD);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(LBRACE);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FN:
      case ENUM:
      case STRUCT:
      case CONST:
      case MOD:
      case USE:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      Item();
    }
    jj_consume_token(RBRACE);
  }

// Exemplo: fn main() { ... } | struct Pessoa { idade: i32 } | use std::io;
  static final public void Item() throws ParseException {
    if (jj_2_1(2)) {
      Funcao();
    } else if (jj_2_2(2)) {
      StructDef();
    } else if (jj_2_3(2)) {
      EnumDef();
    } else if (jj_2_4(2)) {
      module_declaration();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case USE:
        use_imports();
        break;
      case CONST:
        DeclaracaoConst();
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void modules_import() throws ParseException {
    jj_consume_token(MOD);
    jj_consume_token(IDENTIFIER);
  }

// Exemplo: use std::io;
  static final public void use_imports() throws ParseException {
    jj_consume_token(USE);
    path_set();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      jj_consume_token(LBRACE);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_3;
        }
        jj_consume_token(IDENTIFIER);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          jj_consume_token(COMMA);
          break;
        default:
          jj_la1[5] = jj_gen;
          ;
        }
      }
      jj_consume_token(RBRACE);
      break;
    case IDENTIFIER:
      jj_consume_token(IDENTIFIER);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AS:
        jj_consume_token(AS);
        jj_consume_token(IDENTIFIER);
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(SEMICOLON);
  }

  static final public void direct_import_full_path() throws ParseException {
    path_set();
    jj_consume_token(IDENTIFIER);
    jj_consume_token(LPAREN);
    jj_consume_token(RPAREN);
  }

  static final public void path_set() throws ParseException {
    jj_consume_token(IDENTIFIER);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PATH_SEPARATOR:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_4;
      }
      jj_consume_token(PATH_SEPARATOR);
      jj_consume_token(IDENTIFIER);
    }
  }

/* OPERAÇÕES ARITMÉTICAS */
  static final public int one_line() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
    case NOT:
    case MATCH:
    case IF:
    case LPAREN:
    case LBRACK:
    case FALSE:
    case TRUE:
    case CONSTANT:
    case FLOAT_LITERAL:
    case BOOLEAN_LITERAL:
    case CHAR_LITERAL:
    case IDENTIFIER:
    case STRING_LITERAL:
      Expressao();
      jj_consume_token(SEMICOLON);
    {if (true) return 0;}
      break;
    case SEMICOLON:
      jj_consume_token(SEMICOLON);
    {if (true) return 1;}
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public void sum() throws ParseException {
    term();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        jj_consume_token(PLUS);
        break;
      case MINUS:
        jj_consume_token(MINUS);
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      term();
    }
  }

  static final public void term() throws ParseException {
    unary();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLY:
      case DIVIDE:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLY:
        jj_consume_token(MULTIPLY);
        break;
      case DIVIDE:
        jj_consume_token(DIVIDE);
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      unary();
    }
  }

  static final public void unary() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
      jj_consume_token(MINUS);
      element();
      break;
    case LPAREN:
    case CONSTANT:
      element();
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void element() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CONSTANT:
      jj_consume_token(CONSTANT);
      break;
    case LPAREN:
      jj_consume_token(LPAREN);
      sum();
      jj_consume_token(RPAREN);
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/* Fluxo de controle : regras adaptadas para a interface do parser global. */

// Exemplo: if x > 0 { 1 } else { 2 } | while x < 10 { x = x + 1; }
  static final public void EstruturaControle() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
      IfStmt();
      break;
    case WHILE:
      WhileStmt();
      break;
    case LOOP:
      LoopStmt();
      break;
    case FOR:
      ForStmt();
      break;
    case MATCH:
      MatchStmt();
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Exemplo: if condicao { 1 } else if outra { 2 } else { 3 }
  static final public void IfStmt() throws ParseException {
    jj_consume_token(IF);
    Expressao();
    Bloco();
    label_7:
    while (true) {
      if (jj_2_5(2)) {
        ;
      } else {
        break label_7;
      }
      jj_consume_token(ELSE);
      jj_consume_token(IF);
      Expressao();
      Bloco();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      Bloco();
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
  }

// Exemplo: while x < 10 { x = x + 1; }
  static final public void WhileStmt() throws ParseException {
    jj_consume_token(WHILE);
    Expressao();
    Bloco();
  }

// Exemplo: loop { contador = contador + 1; }
  static final public void LoopStmt() throws ParseException {
    jj_consume_token(LOOP);
    Bloco();
  }

// Exemplo: for i in 0..10 { println!(i); }
  static final public void ForStmt() throws ParseException {
    jj_consume_token(FOR);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(IN);
    Iteravel();
    Bloco();
  }

// Exemplo: match opcao { 1 => "Sim", _ => "Nao" }
  static final public void MatchStmt() throws ParseException {
    jj_consume_token(MATCH);
    Expressao();
    jj_consume_token(LBRACE);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FALSE:
      case TRUE:
      case UNDERSCORE:
      case CONSTANT:
      case BOOLEAN_LITERAL:
      case IDENTIFIER:
      case STRING_LITERAL:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_8;
      }
      MatchArm();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        jj_consume_token(COMMA);
        break;
      default:
        jj_la1[19] = jj_gen;
        ;
      }
    }
    jj_consume_token(RBRACE);
  }

// Exemplo: 1 => "Sim"
  static final public void MatchArm() throws ParseException {
    Pattern();
    jj_consume_token(FAT_ARROW);
    MatchBody();
  }

// Exemplo: _ | 1 | "texto" | true
  static final public void Pattern() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CONSTANT:
      jj_consume_token(CONSTANT);
      break;
    case BOOLEAN_LITERAL:
      jj_consume_token(BOOLEAN_LITERAL);
      break;
    case TRUE:
      jj_consume_token(TRUE);
      break;
    case FALSE:
      jj_consume_token(FALSE);
      break;
    case IDENTIFIER:
      jj_consume_token(IDENTIFIER);
      break;
    case STRING_LITERAL:
      jj_consume_token(STRING_LITERAL);
      break;
    case UNDERSCORE:
      jj_consume_token(UNDERSCORE);
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Exemplo: { x + 1 } | "Sim" | resultado + 1
  static final public void MatchBody() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      Bloco();
      break;
    case STRING_LITERAL:
      jj_consume_token(STRING_LITERAL);
      break;
    case MINUS:
    case NOT:
    case MATCH:
    case IF:
    case LPAREN:
    case LBRACK:
    case FALSE:
    case TRUE:
    case CONSTANT:
    case FLOAT_LITERAL:
    case BOOLEAN_LITERAL:
    case CHAR_LITERAL:
    case IDENTIFIER:
      Expressao();
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Exemplo: 0..10 | lista
  static final public void Iteravel() throws ParseException {
    Expressao();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DOTDOT:
      jj_consume_token(DOTDOT);
      Expressao();
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
  }

/* Wrappers temporarios para integrar o bloco de controle antes da chegada do Start(). */

// Exemplo: { let x = 5; x + 1 }
  static final public void Bloco() throws ParseException {
    jj_consume_token(LBRACE);
    label_9:
    while (true) {
      if (jj_2_6(2)) {
        ;
      } else {
        break label_9;
      }
      Comando();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
    case NOT:
    case MATCH:
    case IF:
    case LPAREN:
    case LBRACK:
    case FALSE:
    case TRUE:
    case CONSTANT:
    case FLOAT_LITERAL:
    case BOOLEAN_LITERAL:
    case CHAR_LITERAL:
    case IDENTIFIER:
    case STRING_LITERAL:
      Expressao();
      break;
    default:
      jj_la1[23] = jj_gen;
      ;
    }
    jj_consume_token(RBRACE);
  }

// Exemplo: let x: i32 = 5;
  static final public void DeclaracaoVar() throws ParseException {
    jj_consume_token(LET);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MUT:
      jj_consume_token(MUT);
      break;
    default:
      jj_la1[24] = jj_gen;
      ;
    }
    jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COLON:
      jj_consume_token(COLON);
      Tipo();
      break;
    default:
      jj_la1[25] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASSIGN:
      jj_consume_token(ASSIGN);
      Expressao();
      break;
    default:
      jj_la1[26] = jj_gen;
      ;
    }
    jj_consume_token(SEMICOLON);
  }

// Exemplo: const LIMITE: i32 = 10;
  static final public void DeclaracaoConst() throws ParseException {
    jj_consume_token(CONST);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(COLON);
    Tipo();
    jj_consume_token(ASSIGN);
    Expressao();
    jj_consume_token(SEMICOLON);
  }

// Exemplo: let x = 5; | if x > 0 { 1 } else { 2 } | soma(a, b);
  static final public void Comando() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LET:
      DeclaracaoVar();
      break;
    case CONST:
      DeclaracaoConst();
      break;
    case MATCH:
    case IF:
    case WHILE:
    case FOR:
    case LOOP:
      EstruturaControle();
      break;
    case MINUS:
    case NOT:
    case LPAREN:
    case LBRACK:
    case FALSE:
    case TRUE:
    case CONSTANT:
    case FLOAT_LITERAL:
    case BOOLEAN_LITERAL:
    case CHAR_LITERAL:
    case IDENTIFIER:
    case STRING_LITERAL:
      Expressao();
      jj_consume_token(SEMICOLON);
      break;
    default:
      jj_la1[27] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/*  Tipos  */

// Exemplo: i32 | (i32, bool) | [i32; 10]
  static final public void Tipo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case I32:
    case F64:
    case BOOL:
    case CHAR_T:
    case STR_T:
      TipoPrim();
      break;
    case LPAREN:
      jj_consume_token(LPAREN);
      Tipo();
      label_10:
      while (true) {
        jj_consume_token(COMMA);
        Tipo();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[28] = jj_gen;
          break label_10;
        }
      }
      jj_consume_token(RPAREN);
      break;
    case LBRACK:
      jj_consume_token(LBRACK);
      Tipo();
      jj_consume_token(SEMICOLON);
      jj_consume_token(CONSTANT);
      jj_consume_token(RBRACK);
      break;
    default:
      jj_la1[29] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void TipoPrim() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case I32:
      jj_consume_token(I32);
      break;
    case F64:
      jj_consume_token(F64);
      break;
    case BOOL:
      jj_consume_token(BOOL);
      break;
    case CHAR_T:
      jj_consume_token(CHAR_T);
      break;
    case STR_T:
      jj_consume_token(STR_T);
      break;
    default:
      jj_la1[30] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/*  Funcoes, Structs e Enums  */

// Exemplo: fn soma(a: i32, b: i32) -> i32 { a + b }
  static final public void Funcao() throws ParseException {
    jj_consume_token(FN);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      Parametros();
      break;
    default:
      jj_la1[31] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ARROW:
      jj_consume_token(ARROW);
      Tipo();
      break;
    default:
      jj_la1[32] = jj_gen;
      ;
    }
    Bloco();
  }

// Exemplo: a: i32, b: i32
  static final public void Parametros() throws ParseException {
    Parametro();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[33] = jj_gen;
        break label_11;
      }
      jj_consume_token(COMMA);
      Parametro();
    }
  }

// Exemplo: id: i32
  static final public void Parametro() throws ParseException {
    jj_consume_token(IDENTIFIER);
    jj_consume_token(COLON);
    Tipo();
  }

// Exemplo: struct Pessoa { nome: str, idade: i32 }
  static final public void StructDef() throws ParseException {
    jj_consume_token(STRUCT);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(LBRACE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      CamposStruct();
      break;
    default:
      jj_la1[34] = jj_gen;
      ;
    }
    jj_consume_token(RBRACE);
  }

// Exemplo: nome: str, idade: i32,
  static final public void CamposStruct() throws ParseException {
    CampoStruct();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[35] = jj_gen;
        break label_12;
      }
      jj_consume_token(COMMA);
      CampoStruct();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      break;
    default:
      jj_la1[36] = jj_gen;
      ;
    }
  }

// Exemplo: idade: i32
  static final public void CampoStruct() throws ParseException {
    jj_consume_token(IDENTIFIER);
    jj_consume_token(COLON);
    Tipo();
  }

// Exemplo: enum Cor { Vermelho, Verde, Azul }
  static final public void EnumDef() throws ParseException {
    jj_consume_token(ENUM);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(LBRACE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      VariantesEnum();
      break;
    default:
      jj_la1[37] = jj_gen;
      ;
    }
    jj_consume_token(RBRACE);
  }

// Exemplo: Vermelho, Verde, Azul,
  static final public void VariantesEnum() throws ParseException {
    jj_consume_token(IDENTIFIER);
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[38] = jj_gen;
        break label_13;
      }
      jj_consume_token(COMMA);
      jj_consume_token(IDENTIFIER);
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      break;
    default:
      jj_la1[39] = jj_gen;
      ;
    }
  }

// Exemplo: a + b * 2 > 10 && ativo
  static final public void Expressao() throws ParseException {
    Atribuicao();
  }
